--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,8 @@ install:
   - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-stable; fi
   - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-lowest --prefer-stable; fi
 
+before_script:
+  - touch database/database.sqlite
+  - php artisan migrate
+
 script: vendor/bin/phpunit
